# news-summarizer

./: README.md  package-lock.json  package.json
backend/: .env_TEMPLATE  .gitignore  Makefile  README.md  main.py  pyproject.toml  setup.cfg
backend/routers/: news.py
backend/schemas/: news_schemas.py
backend/utils/: llama2.py  llm.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/components/: Footer.tsx  SummaryCard.tsx
frontend/src/styles/: App.css  SummaryCard.css
src/: App.tsx
src/components/: SummaryCard.tsx
src/styles/: App.css  Footer.css  index.css
src/types/: News.ts
