[metadata]
name = news_summarizer 
description = Get top ten news articles using NewsAPI based on a topic and then summarize the content using a LLM.
long_description = file: READ.md
long_description_content_type = text/markdown
version = 0.1.0
author = Nathaniel Goh 
author_email = nathgoh@alumni.stanford.edu
url = http://github.com/nathgoh/news-summarizer

[options]
packages = find:
python_requires = >=3.9
install_requires = 
    fastapi
    uvicorn[standard]
    langchain
    newsapi-python
    python-dotenv
    huggingface_hub
    transformers
    sentencepiece
    black

[options.package_data]
* = README.md
